[LayoutTest] Fix flakey test "inputevent-drag-drop.html"

On debug mode the WPT will start before image/document is loaded.

This CL changed the tests to use styled text (instead of image) as
drag data.

Also fixed a DCHECK, which would trigger when you do Drag&Drop and
then refresh the page. (introduced in crrev.com/2374743002)

BUG=652979

Review-Url: https://codereview.chromium.org/2393903003
Cr-Commit-Position: refs/heads/master@{#423379}

Former-commit-id: e54340ef786164feb8b97409a7c589176c2fe3ff